<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Trackware - School Transport Parents</string>
    <string name="name_notif">School bus</string>
    <string name="title_activity_main">School bus tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_kid_location">Map</string>
    <string name="parent_code">Parent Code</string>
    <string name="forget_password"><u> Forgot your pin code? </u></string>
    <string name="phone_number">Phone number</string>
    <string name="log_in">LOGIN</string>
    <string name="log_out">Logout</string>
    <string name="my_kids"> My Children</string>
    <string name="do_not_pic_up">Don Not Pick Up </string>
    <string name="call_school">School</string>
    <string name="from">Date From</string>
    <string name="to">Date To</string>
    <string name="notification">Notifications</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="send_notification">Send Notification to Driver &amp; School</string>
    <string name="school_name">School Name</string>
    <string name="active_round">Active Round Now</string>
    <string name="time_to_arrive">Time To Arrive/distance</string>
    <string name="phoneNumber_please">Enter your phoneNumber</string>
    <string name="phoneNumber_format_please">Incorrect phone number format</string>
    <string name="pic_code">Pin code</string>
    <string name="submit">Submit</string>
    <string name="sent">Registration done successfully</string>
    <string name="beacon_successfully">Beacon sent successfully</string>
    <string name="title.tutorial">Tutorial Screen</string>
    <string name="is_register">you have been registered before</string>
    <string name="_8226">\u2022</string>
    <string name="get_start">Get Started </string>
    <string name="done">Done</string>
    <string name="driver_call">Driver</string>
    <string name="notification_me_check_in">Notify me when my children checked in the bus </string>
    <string name="notification_me_check_out">Notify me when my children  checked out the bus </string>
    <string name="notification_me_bus_near_me">Notify me when the bus is near to home </string>
    <string name="cancel">Cancel</string>
    <string name="en">English</string>
    <string name="ar">عربي</string>
    <string name="ar_en">عربي</string>
    <string name="waiting">Waiting</string>
    <string name="retry">Retry</string>
    <string name="reg_email_with_wrong_format">Please use valid e-mail format</string>
    <string name="bus_near">The Bus is Near You</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="failed">Failed</string>
    <string name="enter_from_date">Please enter from date</string>
    <string name="enter_to_date">Please enter to date</string>
    <string name="please_enter_parent_code">Please enter parent code</string>
    <string name="please_enter_pin">Please enter pin</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_pickup">Are you sure you want to send the pick-up request to the school?</string>
    <string name="error_api">Connection Error</string>
    <string name="change_Location">Change home location</string>
    <string name="setting">Settings</string>
    <string name="sure_change_location">Are you sure change your home location ?</string>
    <string name="register">Register</string>
    <string name="go_register">Register</string>
    <string name="please_enter_name">Please Enter userName</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="please_confirm_email">The email addresses do not match</string>
    <string name="bus_location">Bus Location</string>
    <string name="user_name">Full name</string>
    <string name="user_name_hint">User name</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email </string>
    <string name="pin_incorrect">Pin incorrect</string>
    <string name="pic_up"> Pick-Up Round</string>
    <string name="drop_off"> Drop-Off Round</string>
    <string name="pic_up_change_location">Pick-Up Round</string>
    <string name="drop_off_change_location">Drop-Off Round</string>
    <string name="save">Save</string>
    <string name="current_location">To change your current location, please hold the pin and drag it to the new desired location \n this location for:</string>
    <string name="changed_location_successfully">Location has been changed successfully for</string>
    <string name="changed_location_failed">Location has not been changed !</string>
    <string name="sent_absent_successfully">Absent notification sent successfully</string>
    <string name="send_forget_password">Your pin code has been sent to your email</string>
    <string name="internet_connection">Please check internet connection</string>
    <string name="fill_field">Pleas fill all field for date</string>
    <string name="location">Location</string>
    <string name="absent">Absent</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="network_error"> Missing internet connection </string>
    <string name="select_round_">Pleas select round type</string>
    <string name="school">School:  </string>
    <string name="no_notification">No notifications</string>
    <string name="grade">Grade:  </string>
    <string name="error">Error</string>
    <string name="reconnecting_internet">Reconnecting internet</string>
    <string name="reconnecting_server">Reconnecting server</string>
    <string name="please_enter_url">Please enter url</string>
    <string name="no_show">No show</string>
    <string name="round_not_activr">Round not active</string>
    <string name="end_round">The Round Ended</string>
    <string name="disc_url">To complete the registration process, please copy the link sent in the invitation message and paste it in the textbox below.</string>
    <string name="register_fail">Registration failed</string>
    <string name="register_fail_message">Please contact the school admin</string>
    <string name="semester_time">Semester time  :</string>
    <string name="trial">Free days</string>
    <string name="active">Activate</string>
    <string name="expired">expired</string>
    <string name="message_activate">Please enter activation \n code here</string>
    <string name="active_code">Activation code</string>
    <string name="not_started_yet">Not started yet</string>
    <string name="days_left">days left</string>
    <string name="day_left">day left</string>
    <string name="bus_track">Bus track</string>
    <string name="call_with">Call</string>
    <string name="chat">Chat</string>
    <string name="list_teacher">List Teachers</string>
    <string name="message_error_in_server">Error In Server</string>
    <string name="subject">Subject :</string>
    <string name="call_assistant">Attendant</string>
    <string name="please_chose_date">Please chose date correct</string>
    <string name="pic_up_list">Pick up</string>
    <string name="message_no_data">No Results found</string>
    <string name="allow_distance">To send the pick-up notification, you should be near the school at a minimum distance of ___ meters</string>
    <string name="success">Success</string>
    <string name="absent_send_succesfill">Absent sent successfully</string>
    <string name="parents">Parents</string>
    <string name="sinding">sinding</string>
    <string name="error_in_sending">Error In Sending</string>
    <string name="resend_message">Resend message ?</string>
    <string name="api_send_error">Error occurred, Please try again later!</string>
    <string name="teacher">Teacher</string>
    <string name="me">Me</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="language">Language</string>
    <string name="please_select_the_language">Please select the language</string>
    <string name="please_select_the_language_ar">اختر اللغة من فضلك</string>
    <string name="qr_code_title">Add smart card</string>
    <string name="create_pin_code">Create pin code</string>
    <string name="confirm">Confirm</string>
    <string name="your_feedback_was_sent_successfully">Your feedback was sent successfully</string>
    <string name="change_Location_pick">The "Pick-up" Location has been changed successfully</string>
    <string name="change_Location_drop">The "Drop-off" Location has been changed successfully</string>
    <string name="change_Location_both">The "Pick-up and Drop-off" Locations have been changed successfully</string>
    <string name="login_pincode">Enter your pin code</string>
    <string name="scan_the_code_">Scan the QR code on your children smart card and then click confirm to save the card information</string>
    <string name="by_confirmation_this_message">By confirming this message, the device information will be sent to the school admin</string>
    <string name="change_location_screen_title">Change Location</string>
    <string name="this_device_is_not_certified">This device is not certified,please contact your school admin</string>
    <string name="ok_got_it">Ok , Got it</string>
    <string name="the_map_shows_your_location">The map shows your location now, to change the location please hold the pin on the map and drag it to the new desired location then drop it</string>
    <string name="this_location_is_for">This location is for :</string>
    <string name="notification_text_pick">Pick-up Round</string>
    <string name="notification_text_drop">Drop-off Round</string>
    <string name="tearms_of_use_text_a"> I agree to the Trackware\'s </string>
    <string name="tearms_of_use_text_b" ><u> Terms of use </u></string>
    <string name="tearms_of_use_text_c"></string>
    <string name="tearms_of_use_link">https://school.staging.trackware.com/get-terms-of-use-page/en</string>
    <string name="the_pin_code_is_a_number_of_four_digits">- The pin code is a number of four digits</string>
    <string name="do_you_want_to_contact_with">Do you want to contact with ?</string>
    <string name="driver_name">Driver Name</string>
    <string name="active_round_now">Active Round Now</string>
    <string name="attendance_name">Attendant Name</string>
    <string name="skip">Skip</string>
    <string name="end_tut">End</string>
    <string name="no_gps_dialog_title">Unable to access your current location!</string>
    <string name="no_gps_dialog_desc">This action requires your location, please turn on location service "GPS"</string>
    <string name="change_lang_dialog">Change the language to Arabic ?</string>
    <string name="settings_lang">Change the language to Arabic</string>
    <string name="today">Today</string>
    <string name="at_time"> at </string>
    <string name="update_available">You must update this application</string>
    <string name="update_now">Update now</string>
    <string name="maybe_later">Later</string>
    <string name="the_whole_day">The whole day ?</string>
    <string name="only_during_the_morning">Only during the morning ?</string>
    <string name="will_your_child_be_absent_for">Will your child be absent for:</string>
    <string name="pick_image_title">Pick Image</string>
    <string name="track">Track</string>
    <string name="feedback">Feedback</string>
    <string name="enter_your_feedback">Enter your feedback... </string>
    <string name="more">More ...</string>
    <string name="round_is_active">Round is active</string>
    <string name="attintion">Attintion !!</string>
    <string name="school_bus_id_near_to_pick_up">School Bus id near to Pick up</string>
</resources>