<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
      >
    <Button
        android:id="@+id/btnCallDriver"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" android:textAllCaps="false"
        android:background="@drawable/button_green_rectangel_shape"
        android:text="@string/driver_call"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_weight="1"
        android:padding="5dp"/>

    <Button
        android:id="@+id/btnCallSchool"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/button_green_rectangel_shape"
        android:text="@string/call_school"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_weight="1"
        android:padding="5dp"/>

       <Button
           android:id="@+id/btnCancel"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginStart="40dp"
           android:layout_marginEnd="40dp"
           android:layout_marginTop="10dp"
           android:background="@drawable/button_login_round_shap"
           android:text="@string/cancel"
           android:textAllCaps="false"
           android:textColor="@android:color/white"
           android:textStyle="bold"
           android:layout_weight="1"
           android:layout_marginBottom="10dp"/>
   </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>-->

</LinearLayout>