<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:layout_weight="2"
            android:padding="0dp"
            android:scaleX="@integer/scale_ar_en"
            android:src="@drawable/login_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:weightSum="2">

            <TextView
                style="@style/AllTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/please_select_the_language"
                android:textColor="@color/color_white"
                android:textSize="13dp" />

            <TextView
                style="@style/AllTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                android:text="@string/please_select_the_language_ar"
                android:textColor="@color/color_white"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_english"
                style="@style/AllTextViewStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/white_button_selector"
                android:gravity="center"
                android:text="@string/english"
                android:textColor="@color/black"
                android:textSize="13dp" />

            <androidx.legacy.widget.Space
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/button_arabic"
                style="@style/AllTextViewStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/white_button_selector"
                android:gravity="center"
                android:text="@string/arabic"
                android:textColor="@color/black"
                android:textSize="13dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
